// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReportsTableHeader > renders correctly in mobile 1`] = `
<div
  class="d-flex justify-space-between align-center pa-2"
>
  <div
    class="d-flex align-center text-truncate"
  >
    <span
      class="text-headline-small text-truncate"
    >
      downtime
    </span>
    <icon-with-tooltip-stub
      additionalclasses="ml-2"
      color=""
      icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      iconclickedfn="[Function]"
      iconid=""
      iconsrc=""
      size="16"
      tooltiplocation="top"
      tooltiptext="Terms and definitions"
    />
  </div>
  <div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <evocon-v-button-stub
      class="ml-2"
      color=""
      icon="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
  </div>
</div>
`;

exports[`ReportsTableHeader > renders correctly with multiple export options if configType is DOWNTIME 1`] = `
<div
  class="d-flex justify-space-between align-center pa-2"
>
  <div
    class="d-flex align-center text-truncate"
  >
    <span
      class="text-headline-small text-truncate"
    >
      downtime
    </span>
    <icon-with-tooltip-stub
      additionalclasses="ml-2"
      color=""
      icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      iconclickedfn="[Function]"
      iconid=""
      iconsrc=""
      size="16"
      tooltiplocation="top"
      tooltiptext="Terms and definitions"
    />
  </div>
  <div>
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="false"
      itemdisabled="[Function]"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="comment,commentgroup,station,stationgroup,stoptype,stoplocation,productgroup,product,shifttemplate,operator,stopcount,notescount,stopduration,avgduration"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M16,5V18H21V5M4,18H9V5H4M10,18H15V5H10V18Z"
      prependtext="Columns:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="READABLE"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M10 7A3 3 0 0 0 7 10V13A3 3 0 0 0 13 13V10A3 3 0 0 0 10 7M11 13A1 1 0 0 1 9 13V10A1 1 0 0 1 11 10M17 7A3 3 0 0 0 14 10V13A3 3 0 0 0 20 13V10A3 3 0 0 0 17 7M18 13A1 1 0 0 1 16 13V10A1 1 0 0 1 18 10M6 15A1 1 0 1 1 5 14A1 1 0 0 1 6 15Z"
      prependtext="Time format:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <selection-input-stub
      checkbox="false"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue=""
      numericorderby="false"
      placeholder="Export"
      prepend-inner-icon="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"
      prependtext=""
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`ReportsTableHeader > renders correctly with multiple export options if configType is SPEEDLOSS 1`] = `
<div
  class="d-flex justify-space-between align-center pa-2"
>
  <div
    class="d-flex align-center text-truncate"
  >
    <span
      class="text-headline-small text-truncate"
    >
      speedloss
    </span>
    <icon-with-tooltip-stub
      additionalclasses="ml-2"
      color=""
      icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      iconclickedfn="[Function]"
      iconid=""
      iconsrc=""
      size="16"
      tooltiplocation="top"
      tooltiptext="Terms and definitions"
    />
  </div>
  <div>
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="false"
      itemdisabled="[Function]"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="performancecomment,station,stationgroup,productgroup,product,shifttemplate,operator,notescount,avgduration"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M16,5V18H21V5M4,18H9V5H4M10,18H15V5H10V18Z"
      prependtext="Columns:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="READABLE"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M10 7A3 3 0 0 0 7 10V13A3 3 0 0 0 13 13V10A3 3 0 0 0 10 7M11 13A1 1 0 0 1 9 13V10A1 1 0 0 1 11 10M17 7A3 3 0 0 0 14 10V13A3 3 0 0 0 20 13V10A3 3 0 0 0 17 7M18 13A1 1 0 0 1 16 13V10A1 1 0 0 1 18 10M6 15A1 1 0 1 1 5 14A1 1 0 0 1 6 15Z"
      prependtext="Time format:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <selection-input-stub
      checkbox="false"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue=""
      numericorderby="false"
      placeholder="Export"
      prepend-inner-icon="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"
      prependtext=""
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`ReportsTableHeader > renders correctly with one export option if configType is SCRAPREASON 1`] = `
<div
  class="d-flex justify-space-between align-center pa-2"
>
  <div
    class="d-flex align-center text-truncate"
  >
    <span
      class="text-headline-small text-truncate"
    >
      scrapreason
    </span>
    <icon-with-tooltip-stub
      additionalclasses="ml-2"
      color=""
      icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      iconclickedfn="[Function]"
      iconid=""
      iconsrc=""
      size="16"
      tooltiplocation="top"
      tooltiptext="Terms and definitions"
    />
  </div>
  <div>
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="false"
      itemdisabled="[Function]"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="scrapreason,station,stationgroup,productgroup,product,shifttemplate,operator,notescount,avgduration"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M16,5V18H21V5M4,18H9V5H4M10,18H15V5H10V18Z"
      prependtext="Columns:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="text"
      itemvalue="id"
      loading="false"
      menuinputclass="ml-2"
      menuinputtype="primary"
      modelvalue="READABLE"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M10 7A3 3 0 0 0 7 10V13A3 3 0 0 0 13 13V10A3 3 0 0 0 10 7M11 13A1 1 0 0 1 9 13V10A1 1 0 0 1 11 10M17 7A3 3 0 0 0 14 10V13A3 3 0 0 0 20 13V10A3 3 0 0 0 17 7M18 13A1 1 0 0 1 16 13V10A1 1 0 0 1 18 10M6 15A1 1 0 1 1 5 14A1 1 0 0 1 6 15Z"
      prependtext="Time format:"
      removenonexistentselections="false"
      required="false"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <evocon-v-button-stub
      class="ml-2"
      color="quaternary-dark"
      icon="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"
      iconcolor=""
      size="small"
      text="Export"
      textclass=""
      type="primary"
    />
    <!--v-if-->
  </div>
</div>
`;
